# data-engineering-bootcamp

./: pyproject.toml
00-bootcamp-project/: deb2--loading-data-to-bigquery17aug2023-84dbb2a8efb6.json  deb2-gcs-to-bigquery2-17aug2023-7b2a60189228.json  docker-compose.yaml  load_data_to_bigquery.py  load_data_to_gcs.py  load_data_to_gcs_then_bigquery.py  main-api.py  main-postgres.py  main-sftp.py  pipeline.conf
00-bootcamp-project/dags/: events-2023-08-29.csv  greenery_addresses_data_pipeline.py  greenery_dbt_dag.py  greenery_events_data_pipeline.py  greenery_order_items_data_pipeline.py  greenery_orders_data_pipeline.py  greenery_products_data_pipeline.py  greenery_promos_data_pipeline.py  greenery_users_data_pipeline.py  orders-2023-09-02.csv
00-bootcamp-project/dags.products/: deb2-loading-data-to-gcs-then-bigquey-17aug2023-950eb2fe7488.json
00-bootcamp-project/dags.promo/: deb2-loading-file-to-gcs-17216c60e1f1.json
00-bootcamp-project/data/: users.csv
00-bootcamp-project/dbt/greenery/: .user.yml  deb2-analytics-with-dbt-17aug2023-e3e6a300bd66.json
00-bootcamp-project/dbt/greenery/seeds/: persons.csv
01-introduction-to-data-engineering/workshops/data-engineering-lifecycle/: dogs.json  load.sh  pyproject.toml
04-data-pipelines-with-apache-airflow/dags/: my_firsy_dag.py  my_second_dag.py  play_with_airflow_connections_and_hooks.py
07-end-to-end-project/dags/: movements-2023-09-10.csv  networkrail_movements_to_gcs_and_then_bigquery.py
dags/: networkrail_dbt_dag.py  networkrail_movements_to_gcs_and_then_bigquery.py
playground/: baka.py  pyproject.toml
(+11 files in other folders)
