[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Athakowitsusu <135417720+Athakowitsusu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
